<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/arrow_back"/>

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/back"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/back_icon"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/e_mail"
            android:textColor="@color/black"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"/>


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/input_bg"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/example_gmail_com"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:shadowColor="#231B1B"
            android:textColor="@color/black"
            android:textColorHint="#83000000"/>

        <TextView
            android:id="@+id/txt_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date_of_birth"
            android:layout_gravity="start"
            android:textColor="@color/black"
            android:layout_marginStart="55dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="50dp"
            android:id="@+id/editTextDate"
            android:background="@drawable/input_bg"
            android:elevation="5dp"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/date_mask"
            android:inputType="date"/>

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:layout_gravity="start"
            android:textColor="@color/black"
            android:layout_marginStart="55dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/input_bg"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/passwor_mask"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:autofillHints="password"
            android:textColor="@color/black"
            android:textColorHint="#83000000"/>
    </LinearLayout>


    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/logout"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textColor="#840000"
        android:textSize="18sp" />

</RelativeLayout>
</layout>