<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Singup"
    android:background="@drawable/login__bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/angryimg"
        android:alpha="0.98"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Sing_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sing_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/e_mail"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:elevation="5dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/example_gmail_com"
            android:textColor="@color/black"
            android:textColorHint="#83000000"
            android:paddingStart="10dp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:elevation="5dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="#83000000"
            android:hint="@string/user"
            android:paddingStart="10dp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/txt_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/date_of_birth"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:elevation="5dp"
            android:ems="10"
            android:inputType="date"
            android:textColor="@color/black"
            android:textColorHint="#83000000"
            android:hint="@string/date_mask"
            android:paddingStart="10dp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:elevation="5dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#83000000"
            android:hint="@string/passwor_mask"
            android:paddingStart="10dp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/text_passwordcomf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_passwordcomf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_bg"
            android:elevation="5dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#83000000"
            android:hint="@string/passwor_mask"
            android:paddingStart="10dp"
            android:padding="5dp"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:text="@string/confirm"
            android:textColor="#DE1010"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/alredy_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/logibtn"
            android:layout_width="73dp"
            android:layout_height="28dp"
            android:background="@null"
            android:padding="0dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>

    <ImageView
        android:layout_width="92dp"
        android:layout_height="104dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/Gym_Symbol"
        android:layout_margin="5dp"/>
</RelativeLayout>
</layout>